# ai-smart-scheduler

./: LICENSE  README.md  pyproject.toml
ai_smart_scheduler/: __init__.py  main.py  scheduler.py
ai_smart_scheduler/ai/: __init__.py  generator.py
ai_smart_scheduler/models/: __init__.py  schedule.py  task.py  user.py
ai_smart_scheduler/utils/: __init__.py  time_utils.py
tests/: __init__.py  test_models.py  test_scheduler.py  test_time_utils.py
